[project]
name = "test-terraform-branch-deploy"
version = "0.1.0"
description = "E2E tests for terraform-branch-deploy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "e2e: mark test as E2E (requires GitHub token)",
    "slow: mark test as slow",
    "chaos: mark test as chaos testing",
]
